my commit for further error and alignment fixes

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1033,6 +1033,10 @@
         font-size: 0.79em;
     }
 
+    .centerRightProfile ul li span{
+        font-size: 0.95em;
+    }
+
     .topmostRightProfile{
         grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
         height: max-content;
